--- a/configs/deepspeed/ds_config_zero3.json
+++ b/configs/deepspeed/ds_config_zero3.json
@@ -1,19 +1,18 @@
 {
-    "train_micro_batch_size_per_gpu": 1,
-    "gradient_accumulation_steps": 1,
+    "bf16": {
+        "enabled": true
+    },
     "zero_optimization": {
-        "stage": 3,
+        "stage": 3, 
         "overlap_comm": false,
         "contiguous_gradients": true,
         "reduce_scatter": false
     },
-    "zero_allow_untested_optimizer": true,
-    "fp16": {
-        "enabled": true,
-        "loss_scale": 0,
-        "initial_scale_power": 11,
-        "loss_scale_window": 5000,
-        "hysteresis": 4
-    },
-    "wall_clock_breakdown": false
+    "gradient_accumulation_steps": "auto",
+    "gradient_clipping": "auto",
+    "steps_per_print": 2000,
+    "train_batch_size": "auto",
+    "train_micro_batch_size_per_gpu": "auto",
+    "wall_clock_breakdown": false,
+    "reduce_bucket_size": 536870912
 }
