--- a/configs/deepspeed/ds_config_zero3.json
+++ b/configs/deepspeed/ds_config_zero3.json
@@ -1,4 +1,6 @@
 {
+    "train_micro_batch_size_per_gpu": 1,
+    "gradient_accumulation_steps": 1,
     "bf16": {
         "enabled": true
     },
@@ -8,11 +10,6 @@
         "contiguous_gradients": true,
         "reduce_scatter": false
     },
-    "gradient_accumulation_steps": "auto",
-    "gradient_clipping": "auto",
-    "steps_per_print": 2000,
-    "train_batch_size": "auto",
-    "train_micro_batch_size_per_gpu": "auto",
     "wall_clock_breakdown": false,
     "reduce_bucket_size": 536870912
 }
