--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@ SAR_kl_div_analysis_3_0B-2_16.csv filter=lfs diff=lfs merge=lfs -text
 SAR_kl_div_analysis_3_5B-2_8.csv filter=lfs diff=lfs merge=lfs -text
 SAR_kl_div_analysis_3_5B-4_16.csv filter=lfs diff=lfs merge=lfs -text
 SAR_kl_div_values_3_0B-2_16.csv filter=lfs diff=lfs merge=lfs -text
+test.png filter=lfs diff=lfs merge=lfs -text
