--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,12 @@ SAR_kl_div_analysis_3_5B-2_8.csv filter=lfs diff=lfs merge=lfs -text
 SAR_kl_div_analysis_3_5B-4_16.csv filter=lfs diff=lfs merge=lfs -text
 SAR_kl_div_values_3_0B-2_16.csv filter=lfs diff=lfs merge=lfs -text
 test.png filter=lfs diff=lfs merge=lfs -text
+SAR_figures/3_0B-2_16_2.png filter=lfs diff=lfs merge=lfs -text
+SAR_figures/3_0B-2_16_3.png filter=lfs diff=lfs merge=lfs -text
+SAR_figures/3_0B-2_16_7.png filter=lfs diff=lfs merge=lfs -text
+SAR_figures/3_0B-2_16_8.png filter=lfs diff=lfs merge=lfs -text
+SAR_figures/3_0B-2_16_1.png filter=lfs diff=lfs merge=lfs -text
+SAR_figures/3_0B-2_16_4.png filter=lfs diff=lfs merge=lfs -text
+SAR_figures/3_0B-2_16_5.png filter=lfs diff=lfs merge=lfs -text
+SAR_figures/3_0B-2_16_6.png filter=lfs diff=lfs merge=lfs -text
+SAR_figures/3_0B-2_16_9.png filter=lfs diff=lfs merge=lfs -text
